--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,18 @@
+* {
+	box-sizing: border-box;
+}
 body {
 	margin: 0;
-	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-		'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-		sans-serif;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+	color: #d3d3d3 !important;
+	font-family: 'Montserrat', sans-serif !important;
+}
+
+button {
+	font-family: 'Nunito', sans-serif !important;
+}
+
+.App {
+	color: #d3d3d3 !important;
+	width: 100%;
+	height: 100%;
 }
